--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enchantcheck",
-  "version": "10.2.5",
+  "version": "10.2.7",
   "description": "Enchant Check allows you to quick-check your gear or the gear of the player you are currently inspecting.",
   "main": "EnchantCheck/main.lua",
   "scripts": {
@@ -9,7 +9,9 @@
     "build": "wap build --link",
     "postbuild": "node ./postbuild.js",
     "load": "source ./.env",
-    "publish": "wap publish --curseforge-token=$CURSEFORGE_TOKEN"
+    "unlink": "rm -rf rm -rf /Applications/World\\ of\\ Warcraft/_retail_/Interface/AddOns/EnchantCheck",
+    "publish:curseforge": "wap publish --curseforge-token=$CURSEFORGE_TOKEN",
+    "publish": "npm run load && npm run unlink && npm run build && npm run publish:curseforge"
   },
   "author": "",
   "license": "ISC"
